# christmas_lights

./: .gitignore  base.json  base.yml  bpx-250.yml  bpx-600.yml  defaults.json  everything.yml  little-strips.yml  pixel_positions.yml  pyproject.toml  restarter.sh  run-lights  simpixel.json  simpixel.yml  strip-test.yml  strip.json  strip.yml  strips.json  strips.yml  tkl-250.yml  tkl-600.yml
christmas_lights/: Fade.py  Gradient.py  GreyCode.py  Markov.py  Searchlights.py  Sprite1d.py  SpriteLight.py  StateMachine.py  WallLayout.py  animations.py  distributions.py  envelope.py  hamiltonian.py  light.py  light2.py  linear.py  processor.py  streamer.py
projects/: 00-bpa.json  00-searchlight.json  01-fade.json  02-test.json  03-new.json  04-bitsstream.json  05-bigger.json  05-hamiltonian.json  06-rightmost.json  06-smaller.json  07-fade.json  97-searchlight-gif.yml  99-searchlight.json  99-searchlight.yml  calibration.yml  christmas.json  christmas.yml  christmas2.json  christmas3.json  christmas4.json  fades.yml  gif-writer.yml  grey-code.yml  hamiltonian.yml  linear.yml  matrix-3.yml  random-walk.yml  split-random-walk.yml  strip-3.yml
scripts/: run_at_startup.sh  run_lights.sh  run_simpixel.sh
