[tool.poetry]
name = "christmas-lights"
version = "0.1.0"
description = ""
authors = ["Tom Ritchford <tom@swirly.com>"]
readme = "README.md"
packages = [{include = "christmas_lights"}]

[tool.poetry.dependencies]
python = "^3.10"
leds = {path = "/code/leds", develop = true}
xled = "^0.7.0"
tkl = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
